# BlueCode

./: .gitignore
android/: WORKSPACE  capnproto  (+5 more)
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CapnpEcho.cpp  LMDBJNI.cpp  native-lib.cpp
android/app/src/main/res/layout/: fragment_cpp.xml  fragment_menu.xml  fragment_second.xml  fragment_web_socket.xml  menuitem.xml
android/app/src/main/res/xml/: file_paths.xml
android/testserver/: BUILD  CMakeLists.txt
android/testserver/src/: main.cpp
server/dashboard_server/: BUILD  CMakeLists.txt
server/dashboard_server/engine/: BUILD  CMakeLists.txt  PACKAGE.cmake
server/dashboard_server/engine/src/: engine.cpp  engine.h  event_policy.cpp  event_policy.h  generic.cpp  generic.h
server/dashboard_server/engine/src/test/: test.cpp
server/dashboard_server/src/: config.h  generic.h  main.cpp
server/dashboard_server/src/test/: test.cpp
server/discovery_engine/: BUILD  CMakeLists.txt  PACKAGE.cmake
server/discovery_engine/_xcode/: CMakeCache.txt  cmake_install.cmake
server/discovery_engine/_xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  FORMAT_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
server/discovery_engine/_xcode/Debug/: discoveryd  test
server/discovery_engine/_xcode/discovery_engine.build/Debug/ALL_BUILD.build/: Script-CA9FD49342EE4D8697FEA5AA.sh  dgph
server/discovery_engine/_xcode/discovery_engine.build/Debug/FORMAT.build/: Script-D1D4E3B421F44208B4D8BE84.sh  dgph
server/discovery_engine/_xcode/discovery_engine.build/Debug/ZERO_CHECK.build/: Script-561A9955FE0A4C398B10FC82.sh  dgph
server/discovery_engine/_xcode/discovery_engine.build/Debug/discoveryd.build/: dgph
server/discovery_engine/_xcode/discovery_engine.build/Debug/test.build/: dgph
server/discovery_engine/_xcode/discovery_engine.build/Release/test.build/: dgph
server/discovery_engine/_xcode/discovery_engine.xcodeproj/: project.pbxproj
server/discovery_engine/cpp_lmdb/: BUILD  CMakeLists.txt  PACKAGE.cmake
server/discovery_engine/cpp_lmdb/src/: lmdb_cursor.h  lmdb_database.h  lmdb_dbval.h  lmdb_env.cpp  lmdb_env.h
server/discovery_engine/cpp_lmdb/test/: cpp_lmdb_test.h  test.cpp
server/discovery_engine/docker/: Dockerfile  generate
server/discovery_engine/engine/: BUILD  CMakeLists.txt  PACKAGE.cmake
server/discovery_engine/engine/src/: engine.cpp  engine.h  generic.cpp  generic.h  graph_db.cpp  graph_db.h  session_db.cpp  session_db.h
server/discovery_engine/engine/src/test/: test.cpp
server/discovery_engine/src/: config.h  discoveryd.cpp  discoveryd.h  main.cpp
server/discovery_engine/src/test/: test.cpp
server/discovery_engine/xy_lmdb_graph/: BUILD  CMakeLists.txt  PACKAGE.cmake
server/discovery_engine/xy_lmdb_graph/src/: load_graph.cpp  xy_graph_edge_list.h  xy_lmdb_graph.h
server/discovery_engine/xy_lmdb_graph/src/test/: test.cpp
server/discovery_engine/xy_pagerank/: CMakeLists.txt
server/discovery_engine/xy_pagerank/src/: load_graph.cpp  main.cpp  xy_graph_writer.h  xy_pagerank.h  xy_pagerank_config.h  xy_pagerank_config.h.in  xy_pagerank_old.h  xy_pagerank_runner.cpp  xy_priority_queue.h
server/discovery_engine/xy_pagerank/src/test/: xy_priority_queue_test.cpp
server/event_logger/: BUILD  CMakeLists.txt  PACKAGE.cmake
server/event_logger/_xcode/: CMakeCache.txt  cmake_install.cmake
server/event_logger/_xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  FORMAT_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
server/event_logger/_xcode/event_logger.build/Debug/ALL_BUILD.build/: Script-075A8EB2873442EC80CBC873.sh  dgph
server/event_logger/_xcode/event_logger.build/Debug/FORMAT.build/: Script-38FDA407E08D4B678C8BE61F.sh  dgph
server/event_logger/_xcode/event_logger.build/Debug/ZERO_CHECK.build/: Script-6A54102B0FC2465BAE45FE19.sh  dgph
server/event_logger/_xcode/event_logger.build/Debug/event_logger.build/: dgph
server/event_logger/_xcode/event_logger.build/Debug/test.build/: dgph
server/event_logger/_xcode/event_logger.xcodeproj/: project.pbxproj
server/event_logger/engine/: BUILD  CMakeLists.txt  PACKAGE.cmake
server/event_logger/engine/src/: engine.cpp  engine.h  event_policy.cpp  event_policy.h  generic.cpp  generic.h
server/event_logger/engine/src/test/: test.cpp
server/event_logger/request_histogrammer/: BUILD  CMakeLists.txt
server/event_logger/request_histogrammer/engine/: BUILD  CMakeLists.txt  PACKAGE.cmake
server/event_logger/request_histogrammer/engine/src/: engine.cpp  engine.h  event_policy.cpp  event_policy.h  generic.cpp  generic.h
server/event_logger/request_histogrammer/src/: config.h  main.cpp
server/event_logger/request_histogrammer/src/test/: test.cpp
server/event_logger/src/: config.h  event_logger.cpp  event_logger.h  main.cpp
server/event_logger/src/test/: test.cpp
server/main/: BUILD  CMakeLists.txt  Makefile  PACKAGE.cmake  addressbook.capnp.c++  addressbook.capnp.h  main.cpp  nop.cpp  server.cpp  server.h  stacktrace.cpp  stacktrace.h  test_main.cpp
server/main/_xcode/: CMakeCache.txt  cmake_install.cmake
server/main/_xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  FORMAT_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
server/main/_xcode/Debug/: main  nop
server/main/_xcode/DerivedData/ModuleCache/: Session.modulevalidation
server/main/_xcode/DerivedData/main/: info.plist
server/main/_xcode/main.xcodeproj/: project.pbxproj
server/main/schema/: addressbook.capnp
server/proxy/: .model  BUILD  CMakeLists.txt  blinky.cpp  model.qm
server/proxy/_xcode/: CMakeCache.txt  cmake_install.cmake
server/proxy/_xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  FORMAT_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
server/proxy/_xcode/Debug/: proxy
server/proxy/_xcode/proxy.xcodeproj/: project.pbxproj
(+517 files in other folders)
